tests/expected_invalid_parse_top_level_declaration.diag.out
<input>:1:1: error: only module declarations are allowed at the top level; wrap declarations in `domain module Name { ... }` (or boundary, foundation, hazard)
    record Naked {
    ^^^^^^
